--- a/KinoPlus.Services/KinoPlus.Services.csproj
+++ b/KinoPlus.Services/KinoPlus.Services.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KinoPlus.Models\KinoPlus.Models.csproj" />
+  </ItemGroup>
+
 </Project>
