user management and authentication with jwt

--- a/KinoPlus.API/appsettings.json
+++ b/KinoPlus.API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost; Initial Catalog=kinoplus;TrustServerCertificate=True;Trusted_Connection=true;"
   },
+  "TokenKey": "supersecretkey!!!",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
