--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_rating_bar: ^4.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -23,4 +24,14 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: "Albert Sans"
+      fonts:
+        - asset: assets/fonts/albert_sans/AlbertSans-Regular.ttf
+        - asset: assets/fonts/albert_sans/AlbertSans-Medium.ttf
+          weight: 500
+
   uses-material-design: true
