--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^0.13.5
   flutter_rating_bar: ^4.0.1
   intl: ^0.18.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
