--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   intl: ^0.18.0
   transparent_image: ^2.0.1
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
