--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.18.0
   transparent_image: ^2.0.1
   collection: ^1.17.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
