--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   transparent_image: ^2.0.1
   collection: ^1.17.0
   provider: ^6.0.5
+  barcode_widget: ^2.0.3
 
 dev_dependencies:
   flutter_test:
