--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   collection: ^1.17.0
   provider: ^6.0.5
   barcode_widget: ^2.0.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
