--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,5 +38,9 @@ flutter:
         - asset: assets/fonts/albert_sans/AlbertSans-Regular.ttf
         - asset: assets/fonts/albert_sans/AlbertSans-Medium.ttf
           weight: 500
+        - asset: assets/fonts/albert_sans/AlbertSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/albert_sans/AlbertSans-Thin.ttf
+          weight: 200
 
   uses-material-design: true
