seed as embedded resources

--- a/KinoPlus.Services/KinoPlus.Services.csproj
+++ b/KinoPlus.Services/KinoPlus.Services.csproj
@@ -7,6 +7,100 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Seed\Actors.json" />
+    <None Remove="Data\Seed\Categories.json" />
+    <None Remove="Data\Seed\Cities.json" />
+    <None Remove="Data\Seed\Countries.json" />
+    <None Remove="Data\Seed\Genres.json" />
+    <None Remove="Data\Seed\Halls.json" />
+    <None Remove="Data\Seed\LocationHalls.json" />
+    <None Remove="Data\Seed\LocationProjectionTypes.json" />
+    <None Remove="Data\Seed\Locations.json" />
+    <None Remove="Data\Seed\MovieActors.json" />
+    <None Remove="Data\Seed\MovieCategories.json" />
+    <None Remove="Data\Seed\MovieGenres.json" />
+    <None Remove="Data\Seed\MovieReactions.json" />
+    <None Remove="Data\Seed\Movies.json" />
+    <None Remove="Data\Seed\ProjectionTypes.json" />
+    <None Remove="Data\Seed\Roles.json" />
+    <None Remove="Data\Seed\Seats.json" />
+    <None Remove="Data\Seed\Statuses.json" />
+    <None Remove="Data\Seed\UserRoles.json" />
+    <None Remove="Data\Seed\Users.json" />
+    <None Remove="Data\Seed\WeekDays.json" />
+    <None Remove="Data\Seed\Years.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Data\Seed\Actors.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Categories.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Cities.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Countries.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Genres.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Halls.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\LocationHalls.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\LocationProjectionTypes.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Locations.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\MovieActors.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\MovieCategories.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\MovieGenres.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\MovieReactions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Movies.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\ProjectionTypes.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Roles.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Seats.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Statuses.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\UserRoles.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Users.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\WeekDays.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Seed\Years.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
    
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
    
