--- a/KinoPlus.WinUI/App.config
+++ b/KinoPlus.WinUI/App.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <KinoPlus.WinUI.Properties.Settings>
             <setting name="ApiUrl" serializeAs="String">
-                <value>https://localhost:44396/api/</value>
+                <value>http://localhost:8080/api/</value>
             </setting>
         </KinoPlus.WinUI.Properties.Settings>
     </applicationSettings>
