--- a/KinoPlus.WinUI/Properties/Settings.settings
+++ b/KinoPlus.WinUI/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ApiUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://localhost:44396/api/</Value>
+      <Value Profile="(Default)">http://localhost:8080/api/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
