--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.0.5
   barcode_widget: ^2.0.3
   carousel_slider: ^4.2.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
