--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   barcode_widget: ^2.0.3
   carousel_slider: ^4.2.1
   image_picker: ^0.8.7+5
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
