--- a/KinoPlus.API/KinoPlus.API.csproj
+++ b/KinoPlus.API/KinoPlus.API.csproj
@@ -12,10 +12,10 @@
     <None Remove="Data\Images\allquietonthewesternfront.jpg" />
     <None Remove="Data\Images\avatar.jpg" />
     <None Remove="Data\Images\barbie.jpeg" />
+    <None Remove="Data\Images\hero.jpeg" />
     <None Remove="Data\Images\johnwick.jpg" />
     <None Remove="Data\Images\shawshank.jpg" />
     <None Remove="Data\Images\supermario.jpg" />
-    <None Remove="Data\Images\thegirlnextdoor.jpg" />
     <None Remove="Data\Images\topgunmaverick.jpg" />
     <None Remove="Data\Images\up.jpeg" />
     <None Remove="Data\Images\wardogs.jpg" />
@@ -45,7 +45,7 @@
     <EmbeddedResource Include="Data\Images\barbie.jpeg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Data\Images\thegirlnextdoor.jpg">
+    <EmbeddedResource Include="Data\Images\hero.jpeg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Data\Images\johnwick.jpg">
