sorting and filtering movies

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ flutter:
     - family: "Albert Sans"
       fonts:
         - asset: assets/fonts/albert_sans/AlbertSans-Regular.ttf
+          weight: 400
         - asset: assets/fonts/albert_sans/AlbertSans-Medium.ttf
           weight: 500
         - asset: assets/fonts/albert_sans/AlbertSans-Light.ttf
