--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   carousel_slider: ^4.2.1
   image_picker: ^0.8.7+5
   youtube_player_flutter: ^8.1.2
+  adaptive_theme: ^3.2.1
+  simple_shadow: ^0.3.1
 
 dev_dependencies:
   flutter_test:
