--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   adaptive_theme: ^3.2.1
   simple_shadow: ^0.3.1
+  flutter_stripe: ^9.2.2
 
 dev_dependencies:
   flutter_test:
