--- a/KinoPlus.WinUI/KinoPlus.WinUI.csproj
+++ b/KinoPlus.WinUI/KinoPlus.WinUI.csproj
@@ -34,13 +34,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ProjectionDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Update="frmKategorije.cs">
+    <Compile Update="frmCategories.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="frmKorisnici.cs">
+    <Compile Update="frmUsers.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="frmKategorijaUpsert.cs">
+    <Compile Update="frmCategoryUpsert.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="kinoplusDataSet2.Designer.cs">
