--- a/KinoPlus.API/KinoPlus.API.csproj
+++ b/KinoPlus.API/KinoPlus.API.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KinoPlus.Common\KinoPlus.Common.csproj" />
     <ProjectReference Include="..\KinoPlus.Models\KinoPlus.Models.csproj" />
     <ProjectReference Include="..\KinoPlus.Services\KinoPlus.Services.csproj" />
   </ItemGroup>
